--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ to do -
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Norman Borlaug</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Dancing+Script:wght@700&family=Hachi+Maru+Pop&display=swap");
       * {
