--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ to do -
         </div>
       </div>
       <div class="page-portion">
-        <img src="C:\Users\USER\Desktop\g image.jpg " class="image" />
+        <!-- <img src="C:\Users\USER\Desktop\g image.jpg " class="image" /> -->
       </div>
     </div>
     <div class="page" id="achievements">
