added smooth scroll, hidden scrollbar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@ to do -
       * {
         margin: 0px;
         padding: 0px;
+        scroll-behavior: smooth;
+        -moz-overflow-style: none;
+        scrollbar-width: none;
+        
+      }
+      body::-webkit-scrollbar{
+          display: none;
       }
       .page {
         min-height: 100vh;
