set a background-color of text items changed the text color of home page

--- a/index.html
+++ b/index.html
@@ -48,12 +48,22 @@ to do -
       #early_life {
         background-color: #6dc4ff;
       }
+      #early-life-text{
+        background-color: #225293;
+        padding: 20px;
+        border-radius: 5px;
+      }
       #about_him {
         background-color: #7fd31f;
         background-image: url("about\ him.jpg");
         background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
+      }
+      #about-him-text{
+        background-color: #367A09;
+        padding: 20px;
+        border-radius: 5px;
       }
       #contribution {
         background-color: #254edb;
@@ -64,12 +74,23 @@ to do -
         background-position: right;
         text-align: justify;
       }
+      #contribution-text{
+        background-color: #0B1D7F;
+        padding: 20px;
+        border-radius: 5px;
+      }
       #achievements {
         background-color: #ff8665;
         background-image: url("nobel\ prize.jpg");
         background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
+      }
+      .achievement-text{
+        background-color: #d3421a;
+        padding: 20px;
+        border-radius: 5px;
+        
       }
       ul {
         list-style: none;
@@ -127,6 +148,12 @@ to do -
         justify-self: center;
         text-align: right;
       }
+      #home-text>b{
+        color: #222;;
+      }
+      #home-text>p{
+        color: #333;
+      }
       #early_life {
         background-color: #035f8f;
         background-image: url("early life.jpg");
@@ -158,9 +185,9 @@ to do -
     <div class="content">
       <div class="page" id="home">
         <div class="page-portion">
-          <!-- <center><img src="hero image.jpg"  class="image"></center> -->
         </div>
         <div class="page-portion" id="herotext">
+          <div id="home-text">
           <h1>Norman Borlaug</h1>
           <b>Father of the Green Revolution</b>
           <p id="subheading">
@@ -168,9 +195,11 @@ to do -
             great man who has saved billion lives.
           </p>
         </div>
+        </div>
       </div>
       <div class="page" id="early_life">
         <div class="page-portion">
+          <div id="early-life-text">
           <b>Early life of Norman Borlaug</b>
           <p>
             Norman Borlaug born in 25 March 1914. Norman Ernest Borlaug was born
@@ -199,6 +228,7 @@ to do -
             the sport to Minnesota high schools in exhibition matches all around
             the state.
           </p>
+          </div>
         </div>
         <div class="page-portion">
           <!-- <img src="C:\Users\USER\Desktop\download.jpg"  class="image"> -->
@@ -206,7 +236,8 @@ to do -
       </div>
       <div class="page" id="about_him">
         <div class="page-portion"></div>
-        <div class="page-portion" id="about-him-text">
+        <div class="page-portion">
+          <div id="about-him-text">
           <b>About Norman Borlaug</b>
           <p>
             Norman Borlaug was the father of green revolution . He was an
@@ -279,12 +310,14 @@ to do -
     <div class="page" id="achievements">
       <div class="page-portion"></div>
       <div class="page-portion" style="padding-left: 80px;" >
+        <div class="achievement-text">      
         <b>Popular achievements</b>
         <p>
           He was awarded with padma vibhusan in 2006 ,<br />
           nobel peace prize in 1970 , public welfare medal in 2002 and many
-          other awards
+          other awards.
         </p>
+      </div>  
       </div>
       <!-- <img src="C:\Users\USER\Desktop\gr.jpg" class="image">
           <img src="C:\Users\USER\Desktop\nobel prize.jpg"  class="image">
