made the hero text respnsive

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ to do -
       }
       h1 {
         font-family: "Abril Fatface", cursive;
-        font-size: 120px;
+        font-size: 8em;
+        
       }
       b {
         font-family: "Dancing Script", cursive;
@@ -140,7 +141,7 @@ to do -
         max-width: 50vw;
       }
       .page-portion {
-        flex: 1;
+        flex: 1;  
       }
       #herotext {
         flex: 0.6;
@@ -191,6 +192,9 @@ to do -
         .even{
           background-position: top;
           flex-direction: column;
+        }
+        h1{
+          font-size:5em;
         }
       }
     </style>
